	corner case.

	* ipmipower/src/: Fix gcc 4.0 warnings.

	* rmcpping/src/rmcpping.c, ipmiping/src/ipmiping.c: Code cleanup.

	* libfreeipmi/src/ipmi-ipmb-interface.h (IPMI_BMC_LUN_VALID): New
	macro.

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_check_net_fn): Use
	new IPMI_BMC_LUN_VALID macro.

	* ipmiping/src/ipmiping.c (parsepacket): Add additional debugging.

	* ipmipower/src/ipmipower_ping.c (ipmipower_ping_process_pings):
	Fix errmsg typos.

2006-01-26  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd_raw): fixed improper
	behavior bug.

2006-01-24  A Balamurugan  <bala@zresearch.com>

	* fish/scripts/bmc-autoconfig/bmc-autoconfig: improved.

2006-01-24  A Balamurugan  <bala@zresearch.com>

	* fish/scripts/bmc-autoconfig/bmc-config-template: new file.
	
	* fish/scripts/bmc-autoconfig/Makefile.am: updated.

	* fish/scripts/bmc-autoconfig/bmc-autoconfig: improved.

2006-01-24  A Balamurugan  <bala@zresearch.com>

	* fish/scripts/bmc-autoconfig/bmc-autoconfig: checks of template
	file existence.

2006-01-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sessions.c (fill_hdr_session): Cleanup code
	logic.

	* libfreeipmi/src/ipmi-netfn-spec.h: Add IPMI_NET_FN_VALID macro.
	
	* libfreeipmi/src/ipmi-lan-interface.c (fill_lan_msg_hdr,
	ipmi_lan_check_net_fn): Use new macro.
	
2006-01-23  A Balamurugan  <bala@zresearch.com>

	* fish/src/scm-procedures.c (ex_sel_get_first_entry_raw,
	ex_sel_get_next_entry_raw, ex_sel_get_first_entry_hex,
	ex_sel_get_next_entry_hex, ex_sel_get_info_binary,
	ex_sel_get_first_entry, ex_sel_get_next_entry,
	ex_sel_delete_entry, ex_sel_clear, ex_sel_get_clear_status):
	display appropriate error/warning messages.

2006-01-23  Albert Chu <chu11@llnl.gov>

	* rmcpping/src/rmcpping.c (createpacket, parsepacket): Fix typos.

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_check.c
	(_check_session_id), ipmipower/src/ipmipower_config.c
	(ipmipower_config_setup, ipmipower_config_cmdline_parse,