@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower_wrappers.h,v 1.4 2005-12-16 08:48:40 ab Exp $
+ *  $Id: ipmipower_wrappers.h,v 1.5 2006-01-28 20:36:04 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2003 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -100,5 +100,11 @@ void Fiid_obj_get(fiid_obj_t obj, fiid_template_t tmpl, uint8_t *field, uint64_t
  * - Dump lan contents
  */
 void Fiid_obj_dump_lan(int fd, char *prefix, char *hdr, uint8_t *pkt, uint32_t pkt_len, fiid_template_t tmpl_session, fiid_template_t tmpl_msg_hdr, fiid_template_t tmpl_cmd);
+
+/* Fiid_obj_dump_rmcp
+ * - Dump rmcp contents
+ */
+void
+Fiid_obj_dump_rmcp(int fd, char *prefix, char *hdr, uint8_t *pkt, uint32_t pkt_len, fiid_template_t tmpl_cmd);
 
 #endif /* _IPMIPOWER_WRAPPERS_H */
